# diskloom

./: .env.example  .env.production  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.electron.json  vite.config.ts
.github/workflows/: build.yml  pages.yml  quality.yml
docs/: benchmark.css  downloads.css  index.html  styles.css  support.css  ux-audit-report.html
electron/: benchmark.ts  duplicates.ts  main.ts  preload.ts  scanner.ts  types.ts
src/: App.tsx  Benchmark.tsx  Duplicates.tsx  FileKindIcon.tsx  Modal.tsx  Reclaim.tsx  Sunburst.tsx  analytics.ts  demo-api.disabled.ts  demo-api.ts  main.tsx  styles.css  tauri-api.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: benchmark.rs  duplicates.rs  lib.rs  main.rs  scanner.rs  types.rs
test/: scanner.test.mjs
