[package]
name = "diskloom"
version = "2.0.10"
description = "A beautiful, local-first disk space explorer"
authors = ["BarkOnTrack LLC"]
license = "MIT"
edition = "2021"

[lib]
name = "diskloom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
trash = "5"
open = "5"
rfd = "0.15"
sysinfo = "0.33"
rand = "0.9"
same-file = "1"
rayon = "1.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
